<resources>
    <string name="app_name">ViewsExample</string>
    <string name="click_me">Click Me!</string>
    <string name="tap_to_check_uncheck">Tap to Check/Uncheck</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enter_some_text">Enter some text...</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
