<?xml version="1.0" encoding="utf-8"?>

<!--
    - We use a LinearLayout with orientation="vertical" to show all of our Views from top to bottom
    - android:gravity="center_horizontal" centers the child views horizontally
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/myTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="Hello World!"/>

    <EditText
        android:id="@+id/myEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/enter_some_text"/>

    <!--
        - Clicking on this button will call myButtonOnClick in MainActivity
    -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:onClick="myButtonOnClick"
        android:text="@string/click_me"/>

    <CheckBox
        android:id="@+id/myCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tap_to_check_uncheck"
        android:textAppearance="?android:textAppearanceMedium"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_btn_positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:textAppearance="?android:textAppearanceMedium"/>

        <RadioButton
            android:id="@+id/radio_btn_negative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:textAppearance="?android:textAppearanceMedium"/>
    </RadioGroup>
</LinearLayout>